1998-07-04  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d (OS_error): Move declaration.
          (xthread.c): Move #include.

1998-06-26  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Make the *print-circle* subroutines multithread-safe.
        * spvw.d (mlb[0-6], mlbs[0-5], mlb_levels): New macros.
          (mlbitmap): New struct type.
          (mlb_alloc, mlb_expand, mlb_add, mlb_free): New functions.
          (get_circularities, get_circ_mark): New implementations for
          MULTITHREAD.
          (subst_circ, subst_circ_mark): New implementations for MULTITHREAD.

1998-06-26  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * xthread.d: New file.
        * lispbibl.d: Include it if defined(MULTITHREAD).
          (_REENTRANT): Define if defined(MULTITHREAD).
        * makemake.in (OS_includes): Add xthread.
        * FILES.1: Update.
        * gettext/po/Makefile.devel (DSOURCES): Likewise.

1998-06-21  Gilbert Baumann  <unk6@rz.uni-karlsruhe.de>

        * impnotes.html: Fix a couple of syntax errors.

1998-06-25  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * screen.lsp (generic-stream-listen): Adapt return value.

1998-06-25  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * defs1.lsp (load-logical-pathname-translations): Signal an error if
          no translations were found.

1998-06-25  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * defs3.lsp (COMMON-LISP:IN-PACKAGE): New macro.

1998-06-20  Bruno Haible  <bruno@linuix.mathematik.uni-karlsruhe.de>

        * lispbibl.d (OS_file_error, OS_filestream_error): New declarations.
        * errunix.d (OS_error_internal): New function, extracted from OS_error.
          (OS_error): Call it.
          (OS_file_error): New function.
        * erramiga.d (OS_error_internal): New function, extracted from OS_error.
          (OS_error): Call it.
          (OS_file_error): New function.